# tap-afterpay

./: LICENSE copy  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_afterpay/: __init__.py  auth.py  client.py  streams.py  tap.py
tap_afterpay/schemas/: payments.json
tests/: __init__.py  test_core.py
